# lakeside-sentinel

./: .env.example  .gitignore  CLAUDE.md  README.md  com.lakeside-motorbikes.worker.plist  pyproject.toml  review.sh  run.sh
scripts/: evaluate_model.py  finetune.py  test_verification.py  tune_detection.py  visualize_tracks.py
src/lakeside_motorbikes/: __main__.py  cli.py  config.py  main.py
src/lakeside_motorbikes/camera/: auth.py  nest_api.py
src/lakeside_motorbikes/detection/: hsp_detector.py  models.py  scooter_detector.py  vehicle_detector.py  yolo_detector.py
src/lakeside_motorbikes/notification/: email_sender.py  html_report.py
src/lakeside_motorbikes/utils/: daylight.py  image.py  video.py
src/lakeside_sentinel/: __main__.py  cli.py  config.py  main.py
src/lakeside_sentinel/camera/: models.py  nest_api.py
src/lakeside_sentinel/detection/: claude_verifier.py  hsp_detector.py  models.py  veh_detector.py  vehicle_detector.py
src/lakeside_sentinel/notification/: email_sender.py  html_report.py
src/lakeside_sentinel/review/: fine_tuning.py  server.py  (+1 more)
tests/: conftest.py  test_backfill.py  test_claude_verifier.py  test_cli.py  test_daylight.py  test_email_sender.py  test_fine_tuning.py  test_hsp_detector.py  test_html_report.py  test_image.py  test_monitor.py  test_nest_api.py  test_review_server.py  test_scooter_detector.py  test_staging.py  test_tune_detection.py  test_veh_detector.py  test_vehicle_detector.py  test_verification_script.py  test_video.py  test_visualize_tracks.py  test_yolo_detector.py
tests/fixtures/: sample_dashmanifest.xml
(+3 files in other folders)
