[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeside-sentinel"
version = "0.1.0"
description = "Detect motorbikes on a lakeside path using a Nest Cam and YOLO, then send email alerts."
requires-python = ">=3.12"
dependencies = [
    "glocaltokens>=0.7.0",
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "resend>=2.0.0",
    "pydantic-settings>=2.5.0",
"httpx>=0.27.0",
    "isodate>=0.6.1",
    "python-dotenv>=1.0.0",
    "astral>=3.2",
    "anthropic>=0.42.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
